# hash-service

./: .gitignore  CMakeLists.txt  Dockerfile.dev  README.md  sb.dummy.cpp  specification.md
.github/workflows/: build-test-deploy.yml
cmake/: FindASIO.cmake  clean_build.cmake  target_link_static_crt.cmake
include/hash-service/: hash.h  logging.h  server.h  session.h
src/: main.cpp
tests/: CMakeLists.txt  conftest.py  test_client_requests.py
tests/functional/: CMakeLists.txt
tests/functional/pytest/: conftest.py  test_local_server.py
tests/unit/: CMakeLists.txt  hashing.cpp
